<resources>
    <string name="app_name" translatable="false">Hodl Room</string>
    <string name="default_error_message">Unknown error</string>
    <string name="choose_a_coin">Choose a coin</string>
    <string name="purchases">Purchases</string>
    <string name="contentDescription" translatable="false">+</string>
    <string name="currentPrice">One %1$s costs %2$s USD or %3$s BTC</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="total_cost">Total cost: %1$s %2$s</string>
    <string name="save">Save</string>
    <string name="coin_info" translatable="false">%1$s (%2$s)</string>
    <string name="coin_info_with_price" translatable="false">%1$s (%2$s) | %3$s $</string>
    <string name="dialog_text_error" translatable="false">Error</string>
    <string name="btn_back" translatable="false">btn_back</string>
    <string name="arrow_down" translatable="false">arrow down</string>
    <string name="nothing_found">Nothing found</string>

    <string name="network_error_429">Too many requests. Try again later</string>
    <string name="network_error_default">Something went wrong. Try again later</string>
    <string name="network_error_no_internet_connection">No internet connection</string>

    <string name="delete">Delete</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_data">Invalid data</string>
    <string name="success">Success</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password must be 6 or more characters long</string>
    <string name="confirm_password_is_not_same_as_password">Confirm password is not same as password</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="show_password">Show password</string>
    <string name="verification_email_sent">Verification email sent to %1$s</string>
    <string name="verification_email_err">Failed to send verification email. Try again later.</string>
    <string name="verification_email_info_text">Please verify your email. If you haven’t received the verification email check spam or click here and we will send it again.</string>
    <string name="done">Done</string>
    <string name="please_verify_your_email">Please verify your email address</string>
    <string name="back">Back</string>
    <string name="forgot_password">Forgot password</string>
    <string name="please_enter_your_email_address_so_we_can_send_you_an_email_to_reset_your_password">Please enter your email address so we can send you an email to reset your password.</string>
    <string name="send">Send</string>
    <string name="email_sent">Email sent</string>
    <string name="delete_account_title">Are you sure you want to delete your account?</string>
    <string name="delete_account_message">Your account will be permanently deleted. You can\'t undo this action.</string>
    <string name="coin_logo" translatable="false">Coin logo</string>

    <string name="current_price_with_value">Current price: %1$s %2$s</string>
    <string name="average_price_with_value">Average price: %1$s %2$s</string>
    <string name="purchase_price_with_value">Purchase price: %1$s %2$s</string>
    <string name="quantity_with_value">Quantity: %1$s</string>
    <string name="sum_with_value">Sum: %1$s %2$s</string>
    <string name="profit_in_percents_with_value">Profit in percents: %1$s %%</string>
    <string name="profit_in_currency_with_value">Profit in dollars: %1$s %2$s</string>
    <string name="profit_with_value">Profit: %1$s %% |  %2$s %3$s</string>
    <string name="it_is_experimental_feature">You are trying to save a purchase without an internet connection. We do not recommend doing this. This is an experimental feature. We want to improve your experience with %1$s and make it possible to work offline. If you find any errors, please contact us.</string>
    <string name="options">Options</string>
    <string name="feedback">Feedback</string>
    <string name="support_email" translatable="false">ihav.kozak.za.dunai@gmail.com</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="choose_one">Сhoose one</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="btn_add_new_purchase">Add a new purchase</string>
    <string name="downloading_update">Downloading update</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_up_agreement">By clicking \'SIGN UP\' you agree to the Privacy Policy and Terms and Conditions.</string>
    <string name="walled_copied">Wallet copied</string>
    <string name="support_us">Support us</string>
    <string name="we_need_your_help">We need your help to continue improving the project. Select the coin you want to donate in.</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="dialog_text_success" translatable="false">Success</string>
</resources>