<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <com.dezzomorf.financulator.ui.view.FinanculatorEditText
                android:id="@+id/email_edit_text_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:alphaLength="14"
                android:inputType="textEmailAddress"
                app:errorText="@string/invalid_email"
                app:includeErrorText="true"
                app:errorTextColor="@color/purple_200"
                app:errorTextVisibility="invisible"
                app:hint="@string/email"
                app:inputBackground="@color/white" />

            <com.dezzomorf.financulator.ui.view.FinanculatorEditText
                android:id="@+id/password_edit_text_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:includeErrorText="true"
                android:layout_marginBottom="4dp"
                android:inputType="textPassword"
                app:errorText="@string/invalid_password"
                app:errorTextColor="@color/purple_200"
                app:errorTextVisibility="invisible"
                app:alphaLength="10"
                app:hint="@string/password"
                app:inputBackground="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button_sign_in"
                style="@style/Financulator.MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:enabled="true"
                android:text="@string/login" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sign_up_text_view_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginVertical="40dp"
        android:text="@string/sign_up"
        android:textColor="@color/purple_200"
        android:textSize="28sp" />
</FrameLayout>
