<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="12dp"
                android:text="@string/please_enter_your_email_address_so_we_can_send_you_an_email_to_reset_your_password"/>

            <com.dezzomorf.financulator.ui.view.FinanculatorEditText
                android:id="@+id/email_edit_text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:inputType="textEmailAddress"
                app:alphaLength="14"
                app:errorText="@string/invalid_email"
                app:errorTextColor="@color/purple_200"
                app:errorTextVisibility="invisible"
                app:hint="@string/email"
                app:includeErrorText="true"
                app:inputBackground="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_button_forgot_password"
                style="@style/Financulator.MaterialButton"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/send" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button_forgot_password"
                style="@style/Financulator.MaterialButton"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/back" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
