<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/verification_message_state_text_view_email_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/verification_email_sent" />

            <TextView
                android:id="@+id/verification_info_text_view_email_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/verification_email_info_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done_button_email_verification"
                style="@style/Financulator.MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/done" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button_email_verification"
                style="@style/Financulator.MaterialButton"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/back" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
