<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_purchase" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/coin_logo_left_image_view_purchase"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:contentDescription="@drawable/ic_baseline_add_circle_24" />

        <TextView
            android:id="@+id/current_price_text_view_purchase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="16dp" />

        <ImageView
            android:id="@+id/coin_logo_right_image_view_purchase"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:contentDescription="@drawable/ic_baseline_add_circle_24" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gradient_center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/description"
        style="@style/Financulator.EditText"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:minHeight="36dp"
        android:spinnerMode="dialog"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/amount"
        style="@style/Financulator.EditText"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/quantity"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/price"
        style="@style/Financulator.EditText"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_cost"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/price"
        tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_save"
        style="@style/Financulator.Button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/sum"
        tools:visibility="visible">

        <TextView
            style="@style/Financulator.ButtonText"
            android:text="@string/save" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
